--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -23,9 +23,9 @@
 }
 
 .home_top_img {
-	height: 20px;
+	height: 45%;
 	margin-top: 17px;
-	margin-left: 19px;
+	margin-left: 3%;
 }
 
 .home_head_img {
