--- a/src/page/zdgz/hbgj/hbgj_air/hbgj_air.css
+++ b/src/page/zdgz/hbgj/hbgj_air/hbgj_air.css
@@ -27,4 +27,50 @@
 .twoLevel_left_div{
     width: 25%;display: flex;height: 43px;background: #ffffff;border-right: 1px solid #f3f3f3;margin-top: 1px;
 }
+.ssgk_title1{
+    font-size:37px;color:#333333;text-align:center;
+    padding-top: 18px;
+}
+.ssgk_title_img{
+    z-index:-1; height: 200px;width: 100%;position: absolute;top: 0px;left: 0px;
+}
+.ssgk_title1_div{
+    width:50%;text-align:right;margin-right:17px;font-size:14px;color:#666666;
+    position: relative;
+}
+.ssgk_title2_div{
+    width:50%;text-align:left;margin-right:17px;font-size:14px;color:#666666; position: relative;
+}
+.you{
+    background: #75D492;
+}
+.liang{
+    background:#C5D686 
+}
+.qingdu{
+    background: #F0A15C ;
+}
+.zhongdu1{
+    background:#E35E5F  
+}
 
+.zhongdu{
+    background: #B83B5D;
+}
+.yanzhong{
+    background:#57155D 
+}
+
+.yuanquan{
+    width: 7px;height: 7px;border-radius: 30px;background: rgb(204, 204, 204);margin-top: 6px;margin-left:8px;
+}
+
+.echars_title{
+    position: relative;height: 40px;background: #ffffff;border-bottom: 1px solid #cccccc;
+    line-height:40px;
+    
+}
+.echars_titile_div{
+    border-left:2px solid #1976d2;font-size:14px;margin-left:12px;
+    padding-left: 10px;
+}
