--- a/src/page/cyzx/nyts/nyts_xny/nyts_xny_xmlb/nyts_xny_xmlb.css
+++ b/src/page/cyzx/nyts/nyts_xny/nyts_xny_xmlb/nyts_xny_xmlb.css
@@ -190,13 +190,14 @@
 	color: #1976D2;
 }
 
-.qygmImg{
-    width: 40px;
+
+
+.xny_xmlxImg{
+    height: 20px;
 }
 
-.qyxzImg{
-    width: 47px;
-}
+
+
 .van-search{
     padding: 0%;
 }
