--- a/src/page/cyzx/nyts/nyts_xny/nyts_xny_gk/nyts_xny_gk.css
+++ b/src/page/cyzx/nyts/nyts_xny/nyts_xny_gk/nyts_xny_gk.css
@@ -78,3 +78,8 @@
     height: 13px;
     margin-top: 5px;
 }
+.van-tabs__line {
+    background-color: #3097FB;
+    margin-bottom: 2px;
+    height: 2px;
+}
