--- a/src/page/cyzx/nyts/nyts.css
+++ b/src/page/cyzx/nyts/nyts.css
@@ -3,19 +3,27 @@
 	height: 24px;
 }
 
-#tabId1 .van-tabs__line {
-    background-color: #3097FB;
-    margin-bottom: 2px;
-    height: 2px;
-    width: 75px;
-    transform: translateX(47px) translateX(-50%);
-    transition-duration: 0.3s;
+.top_img{
+    height:56px;
+    position: absolute;
+    z-index: -1;
 }
-#tabId2 .van-tabs__line {
-    background-color: #3097FB;
-    margin-bottom: 2px;
-    height: 2px;
-    width: 70px;
-    transform: translateX(67px) translateX(-50%);
-    transition-duration: 0.3s;
+.top_title_select1{
+    color: rgb(25, 118, 211);font-size: 14px;text-align: left;padding-top: 15px;padding-left: 15px;
+}
+.top_title_select2{
+    color:#47d3ba;font-size: 14px;text-align: left;padding-top: 15px;padding-left: 15px;
+}
+.top_title_select3{
+    color: #fbb01c;font-size: 14px;text-align: left;padding-top: 15px;padding-left: 15px;
+}
+.top_title_noselect{
+    color: rgb(255, 255, 255);font-size: 14px;text-align: left;padding-top: 15px;padding-left: 15px;
+}
+.block_div_style{
+    position: relative;height:56px;
+}
+
+.twoLevel_left_div{
+    width: 25%;display: flex;height: 43px;background: #ffffff;border-right: 1px solid #f3f3f3;margin-top: 1px;
 }
