--- a/src/page/cyzx/nyts/nyts_mt/nyts_mt_gk/nyts_mt_gk.css
+++ b/src/page/cyzx/nyts/nyts_mt/nyts_mt_gk/nyts_mt_gk.css
@@ -80,3 +80,8 @@
     height: 13px;
     margin-top: 5px;
 }
+#tabId .van-tabs__line{
+    background-color:#3097FB;
+    margin-bottom:2px;
+    height:2px;
+}
