--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -2,11 +2,11 @@
 	text-align: center;width: 25%;
 }
 .main_item_img{
-	height: 21px;margin-top: 9px;
+	height: 21PX;margin-top: 9PX;
 }
 
 .main_item_noSelect{
-	margin-top: 2px;color: #666666;font-size: 11px;
+	margin-top: 2PX;color: #666666;font-size: 11PX;
 }
 .mui-search .mui-placeholder {
 	text-align: left;
