--- a/src/page/cyzx/nyts/nyts_mcq/nyts_mcq_gk/nyts_mcq_gk.css
+++ b/src/page/cyzx/nyts/nyts_mcq/nyts_mcq_gk/nyts_mcq_gk.css
@@ -1,3 +1,6 @@
+.mcq_gk_title{
+    font-size:15px;
+}
 .threeTab{
     width: 100%;
     height: 90px;
@@ -62,6 +65,7 @@
 	letter-spacing: 0px;
     color: #333333;
     margin-left: 10px;
+    font-size: 15px;
 }
 .timeYear{
     font-family: MicrosoftYaHei-Bold;
