--- a/src/page/cyzx/nyts/nyts_mcq/nyts_mcq_qylb/nyts_mcq_qylb_detail/nyts_mcq_qylb_detail.css
+++ b/src/page/cyzx/nyts/nyts_mcq/nyts_mcq_qylb/nyts_mcq_qylb_detail/nyts_mcq_qylb_detail.css
@@ -1,3 +1,12 @@
+.mt_xmlb_deali_font_style{
+    font-size:15px;
+    margin-left: 2px;
+}
+.mt_xmlb_deali_content_font_style{
+    font-size:15px;
+    margin-top: 8px;
+    margin-left: 1PX;
+}
 .dateSelect{
   
     width: 100%;
