--- a/src/page/cyzx/nyts/nyts_mt/nyts_mt_xmlb/nyts_mt_xmlb_detail/nyts_mt_xmlb_detail.css
+++ b/src/page/cyzx/nyts/nyts_mt/nyts_mt_xmlb/nyts_mt_xmlb_detail/nyts_mt_xmlb_detail.css
@@ -1,3 +1,15 @@
+.mt_xmlb_deali_font_style{
+    font-size:15px;
+    margin-left: 2px;
+}
+.mt_xmlb_deali_content_font_style{
+    font-size:15px;
+    margin-top: 8px;
+    margin-left: 1PX;
+}
+.mt_xmlb_deali_small_img_style{
+    height:22px;
+}
 .dateSelect{
   
     width: 100%;
