--- a/src/page/cyzx/nyts/nyts_xny/nyts_xny_gk/nyts_xny_gk.css
+++ b/src/page/cyzx/nyts/nyts_xny/nyts_xny_gk/nyts_xny_gk.css
@@ -1,3 +1,6 @@
+.xny_gk_font_style{
+    font-size:16px;
+}
 .threeTab{
     width: 100%;
     height: 90px;
@@ -62,6 +65,7 @@
 	letter-spacing: 0px;
     color: #333333;
     margin-left: 10px;
+    font-size:14px;
 }
 .timeYear{
     font-family: MicrosoftYaHei-Bold;
