--- a/src/page/cyzx/nyts/nyts_xny/nyts_xny_xmlb/nyts_xny_xmlb_detail/nyts_xny_xmlb_detail.css
+++ b/src/page/cyzx/nyts/nyts_xny/nyts_xny_xmlb/nyts_xny_xmlb_detail/nyts_xny_xmlb_detail.css
@@ -1,3 +1,8 @@
+.xny_xmlb_deali_content_font_style {
+    font-size: 15px;
+    margin-top: 8px;
+    margin-left: 18px;
+  }
 .dateSelect{
   
     width: 100%;
