--- a/src/page/zdgz/zdgc/zdgc_czwt/zdgc_czwt_deali/zdgc_czwt_deali.css
+++ b/src/page/zdgz/zdgc/zdgc_czwt/zdgc_czwt_deali/zdgc_czwt_deali.css
@@ -20,6 +20,7 @@
     margin-right:4px;
 }
 .vantlist_block{
+    font-size: 14px;
     color: rgb(255, 255, 255);background: rgb(60, 161, 236);width: 40px;height: 40px;border-radius: 9px;margin-left: 21px;text-align: center;
 }
 .timeline-circle{
