修改网格样式

--- a/src/page/zdgz/hbgj/hbgj_wgjg/hbgj_wgjg_tjfx/hbgj_wgjg_tjfx.css
+++ b/src/page/zdgz/hbgj/hbgj_wgjg/hbgj_wgjg_tjfx/hbgj_wgjg_tjfx.css
@@ -148,6 +148,7 @@
 	background: #E1F0FF;
 	font-size: 13px;
 	border: 1px solid #4F92D8;
+	line-height: 20px;
 }
 
 .top_wgsx_li3_noselect {
@@ -158,4 +159,5 @@
 	background: #ffffff;
 	font-size: 13px;
 	border: 1px solid #cccccc;
+	line-height: 20px;
 }
