--- a/src/page/jjyx/jjyx_ztts/jjyx_ztts_qxqktj/jjyx_ztts_qxqktj.css
+++ b/src/page/jjyx/jjyx_ztts/jjyx_ztts_qxqktj/jjyx_ztts_qxqktj.css
@@ -135,5 +135,5 @@
     height: 12px;margin-top: 4px;margin-right: 5px;margin-left: 5px;
 }
 .menu_li_div{
-    color: #333333;font-size: 15px;
+    color: #3098fb;margin-left: 3px;font-size: 15px;width: 90%;
 }
