--- a/src/page/jjyx/jjyx_ztts/jjyx_ztts_qxqktj/jjyx_ztts_qxqktj.css
+++ b/src/page/jjyx/jjyx_ztts/jjyx_ztts_qxqktj/jjyx_ztts_qxqktj.css
@@ -137,3 +137,6 @@
 .menu_li_div{
     color: #3098fb;margin-left: 3px;font-size: 15px;width: 90%;
 }
+.menuliClass{
+    background: rgb(232, 244, 255)
+}
