--- a/src/page/zdgz/hbgj/hbgj_wgjg/hbgj_wgjg_wrylist/hbgj_wgjg_wrylist.css
+++ b/src/page/zdgz/hbgj/hbgj_wgjg/hbgj_wgjg_wrylist/hbgj_wgjg_wrylist.css
@@ -84,7 +84,7 @@
     top: 300PX;
     bottom: 0px;
     height: auto;
-    z-index: 999;
+    /* z-index: 1; */
   }
   .dialogNoSelect {
 	border: 1px solid #cccccc;
