--- a/src/page/zdgz/hbgj/hbgj_wgjg/hbgj_wgjg_wgperson/hbgj_wgjg_wgperson.css
+++ b/src/page/zdgz/hbgj/hbgj_wgjg/hbgj_wgjg_wgperson/hbgj_wgjg_wgperson.css
@@ -64,11 +64,11 @@
 .echars_title{
     position: relative;height: 40px;background: #ffffff;border-bottom: 1px solid #cccccc;
     line-height:40px;
-    
+
 }
 
 .list_right_jt{
-    
+
     height: 15px;
     position: absolute;
     right: 12px;
@@ -114,67 +114,68 @@
 .listTypeStyle{
     margin-left:10px;display: flex;color: #1976d2;border-radius: 10px;border: 1px solid #1976d2;font-size: 12px;padding: 2px 8px;
 }
-
 .top_menu_wgsx_div {
-	height: 57%;
-	display: flex;
-	position: absolute;
-	z-index: 0;
-	left: 26px;
-	bottom: 49px;
-	background: #ffffff;
-	border-radius: 0px;
-	box-shadow: 2px 2px 12px #cccccc;
+  height: 73%;
+  display: flex;
+  position: fixed;
+  z-index: 0;
+  left: 26px;
+  bottom: 49px;
+  background: #ffffff;
+  border-radius: 0px;
+  box-shadow: 2px 2px 12px #cccccc;
 }
 .top_wgsx_li1_select {
-	color: #4F92D8;
-	height: 40px;
-	line-height: 40px;
-	font-size: 13px;
-	background: #F9F9F9;
-	border-left: 2px solid #4F92D8;
+  color: #4F92D8;
+  height: 40px;
+  line-height: 40px;
+  font-size: 13px;
+  background: #F9F9F9;
+  border-left: 2px solid #4F92D8;
 }
 
 .top_wgsx_li1_noselect {
-	color: #000000;
-	height: 40px;
-	background: #FFFFFF;
-	line-height: 40px;
-	font-size: 13px;
+  color: #000000;
+  height: 40px;
+  background: #FFFFFF;
+  line-height: 40px;
+  font-size: 13px;
 }
 
 .top_wgsx_li2_select {
-	color: #4F92D8;
-	height: 40px;
-	line-height: 40px;
-	font-size: 13px;
-	background: #F0F0F0;
+  color: #4F92D8;
+  height: 40px;
+  line-height: 40px;
+  font-size: 13px;
+  background: #F0F0F0;
 }
 
 .top_wgsx_li2_noselect {
-	color: #000000;
-	height: 40px;
-	background: #F9F9F9;
-	line-height: 40px;
-	font-size: 13px;
+  color: #000000;
+  height: 40px;
+  background: #F9F9F9;
+  line-height: 40px;
+  font-size: 13px;
 }
 
 .top_wgsx_li3_select {
-	border-radius: 50px;
-	margin: 10px;
-	padding: 3px;
-	color: #000000;
-	background: #E1F0FF;
-	font-size: 13px;
-	border: 1px solid #4F92D8;
+  border-radius: 50px;
+  margin: 10px;
+  padding: 3px;
+  color: #000000;
+  background: #E1F0FF;
+  font-size: 13px;
+  border: 1px solid #4F92D8;
+  line-height: 20px;
 }
 
 .top_wgsx_li3_noselect {
-	border-radius: 50px;
-	margin: 10px;
-	padding: 3px;
-	color: #000000;
-	background: #ffffff;
-	font-size: 13px;
-	border: 1px solid #cccccc;
+  border-radius: 50px;
+  margin: 10px;
+  padding: 3px;
+  color: #000000;
+  background: #ffffff;
+  font-size: 13px;
+  border: 1px solid #cccccc;
+  line-height: 20px;
 }
