--- a/src/page/pjlz/pjlzList/pjlzList.css
+++ b/src/page/pjlz/pjlzList/pjlzList.css
@@ -88,13 +88,15 @@ margin-left: 7px
     display: flex;position: absolute;right: 22px;bottom: 0px;border: 1px solid #3098fb;border-radius: 40px;padding: 2px 8px;
 }
 .pjlzListyjcbImg{
-    height: 13px;
+    height: 14px;
 margin: auto 0;
+margin-top:4px;
 }
 .pjlzListyjcbfont{
-    font-size: 13px;
+    font-size: 14px;
 color: #3098fb;
 margin-left: 3px;
+
 }
 .dialogNoSelect {
 	border: 1px solid #cccccc;
@@ -120,8 +122,20 @@ margin-left: 3px;
 }
 
 
-
-
+.pjlzListyjcbNew{
+    display: flex;
+    border-radius: 6px;
+    background: #DBEEFF;
+    margin: 2px 20px;
+    padding: 5px;
+    width: 100%;
+}
+.pjlzListImgRightNew{
+    position: absolute;
+    height: 66px;
+    top: 26px;
+    right: 27px;
+}
 
 
 
