--- a/src/page/main/main_new.css
+++ b/src/page/main/main_new.css
@@ -5,6 +5,7 @@
 .indexLiStyle{
     text-align: center;
     margin-top: 30px;
+    position:relative;
 }
 .indexLiContentImgStyle{
      height: 54px;
