--- a/src/page/pjlz/pjlzListSearch/pjlzListSearch.css
+++ b/src/page/pjlz/pjlzListSearch/pjlzListSearch.css
@@ -136,6 +136,13 @@ margin-left: 3px;
     top: 26px;
     right: 27px;
 }
+.pjlzListSearchSmallDivFontNew{
+    margin-left:90px;
+}
+.pjlzListSearchSmallDivFontNew1{
+    margin-left:20px;
+}
+
 
 
 
