--- a/src/page/pjlz/pjlzList/pjlzList.css
+++ b/src/page/pjlz/pjlzList/pjlzList.css
@@ -137,6 +137,16 @@ margin-left: 3px;
     bottom: 23px;
     right: 27px;
 }
+.pjlzListSmallDivFontNew{
+    margin-left:90px;
+    font-size: 14px;
+    color: #666666;
+}
+.pjlzListSmallDivFontNew1{
+    margin-left:20px;
+    font-size: 14px;
+    color: #666666;
+}
 
 
 
