--- a/src/page/pjlz/pjlzList/pjlzList.css
+++ b/src/page/pjlz/pjlzList/pjlzList.css
@@ -134,11 +134,11 @@ margin-left: 3px;
 .pjlzListImgRightNew{
     position: absolute;
     height: 87px;
-    bottom: 23px;
+    bottom: 10%;
     right: 27px;
 }
 .pjlzListSmallDivFontNew{
-    margin-left:90px;
+    margin-left:100px;
     font-size: 14px;
     color: #666666;
 }
