--- a/src/page/pjlz/pjlzList/pjlzList.css
+++ b/src/page/pjlz/pjlzList/pjlzList.css
@@ -131,7 +131,7 @@ margin-left: 3px;
     padding: 5px;
     width: 85%;
 }
-.pjlzListImgRightNew{
+.pjlzListImgRightNew1{
     position: absolute;
     height: 87px;
     bottom: 10%;
