--- a/src/page/pjlz/pjlzList/pjlzList.css
+++ b/src/page/pjlz/pjlzList/pjlzList.css
@@ -139,8 +139,8 @@ margin-left: 3px;
 .pjlzListImgRightNew1{
     position: absolute;
     height: 87px;
-    bottom: 10%;
-    right: 27px;
+    top: 0%;
+    right: 6px;
 }
 .pjlzListSmallDivFontNew{
     margin-left:100px;
