--- a/src/page/pjlz/pjlzListSearch/pjlzListSearch.css
+++ b/src/page/pjlz/pjlzListSearch/pjlzListSearch.css
@@ -61,8 +61,8 @@
     margin-left: 12px;
 }
 .pjlzListTitle{
-    width: 60%;
-    line-height: 28px;
+    width: 80%;
+    line-height: 23px;
     margin-left: 12px;
     font-size: 16px;
 }
@@ -142,6 +142,16 @@ margin-left: 3px;
 }
 .pjlzListSearchSmallDivFontNew1{
     margin-left:20px;
+}
+.pjlzListSearchSmallDivFontNew2{
+    margin-left:7px;
+    font-size: 14px;
+    color: #666666;
+}
+.pjlzListSearchSmallDivFontTime{
+    font-size: 14px;
+    color: #666666;
+    margin-left: 7px
 }
 
 
