--- a/src/page/pjlz/pjlzStatic/pjlzStatic.css
+++ b/src/page/pjlz/pjlzStatic/pjlzStatic.css
@@ -79,3 +79,27 @@
     /* margin: 0 auto; */
     background-repeat: no-repeat;
 }
+.pjlzStaticModel5{
+    background: url(../../../assets/img/statistics_bg6.png) 100% 100%;
+    background-size: contain;
+    height: 55px;
+    width: 176px;
+    /* margin: 0 auto; */
+    background-repeat: no-repeat;
+}
+.pjlzStaticModel6{
+    background: url(../../../assets/img/statistics_bg5.png) 100% 100%;
+    background-size: contain;
+    height: 55px;
+    width: 176px;
+    /* margin: 0 auto; */
+    background-repeat: no-repeat;
+}
+.pjlzStaticModel7{
+    background: url(../../../assets/img/statistics_bg7.png) 100% 100%;
+    background-size: contain;
+    height: 55px;
+    width: 176px;
+    /* margin: 0 auto; */
+    background-repeat: no-repeat;
+}
