--- a/src/page/pjlz/pjlzList/pjlzList.css
+++ b/src/page/pjlz/pjlzList/pjlzList.css
@@ -61,7 +61,7 @@
     margin-left: 12px;
 }
 .pjlzListTitle{
-    width: 80%;
+    width: 75%;
     line-height: 23px;
     margin-left: 12px;
     font-size: 16px;
@@ -164,5 +164,18 @@ margin-left: 3px;
     color: #666666;
 }
 
+.backgroundListZero{
+  background: #ffffff;
+  
+}
+.backgroundListOne{
+    height: 110PX;
+    position: absolute;
+    top: 0px;
+    width: 100%;
+    background: url("../../../assets/img/list_bg.png") no-repeat;
+	text-align: center;
+    background-size: cover;
+}
 
 
