--- a/src/page/pjlz/pjlzListSearch/pjlzListSearch.css
+++ b/src/page/pjlz/pjlzListSearch/pjlzListSearch.css
@@ -61,7 +61,7 @@
     margin-left: 12px;
 }
 .pjlzListTitle{
-    width: 80%;
+    width: 75%;
     line-height: 23px;
     margin-left: 12px;
     font-size: 16px;
@@ -153,7 +153,20 @@ margin-left: 3px;
     color: #666666;
     margin-left: 7px
 }
-
+.backgroundListSearchZero{
+    background: #ffffff;
+   
+  }
+  .backgroundListSearchOne{
+    height: 110PX;
+    position: absolute;
+    top: 0px;
+    width: 100%;
+    background: url("../../../assets/img/list_bg.png") no-repeat;
+	text-align: center;
+    background-size: cover;
+  }
+  
 
 
 
