--- a/src/page/pjlz/pjlzListSearch/pjlzListSearch.css
+++ b/src/page/pjlz/pjlzListSearch/pjlzListSearch.css
@@ -164,7 +164,7 @@ margin-left: 3px;
     width: 100%;
     background: url("../../../assets/img/list_bg.png") no-repeat;
 	text-align: center;
-    background-size: cover;
+    background-size: 100%;
   }
   
 
